<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background_sand"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gilroy"
        android:lineSpacingMultiplier="0.65"
        android:text="@string/red_flags_title_lc"
        android:textColor="@color/primary_red"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/title_screen_slogan"
        android:textColor="@color/dark_red"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/imgFlag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/flag_illustration"
        android:contentDescription="@string/landing_page_img_desc"
        app:layout_constraintBottom_toTopOf="@+id/etCodeWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlogan" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/etCodeWrapper"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/title_screen_input_bg"
        app:layout_constraintBottom_toTopOf="@+id/btNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFlag">

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="no"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/gilroy"
            android:hint="@string/room_code_hint"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingHorizontal="15dp"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/background_darker_darker"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvQRcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textCapCharacters" />

        <TextView
            android:id="@+id/tvQRcode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/qr_code"
            android:textColor="@color/primary_red"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlay"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy"
            android:gravity="center"
            android:text="@string/play_btn"
            android:textColor="@color/primary_red"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etCode"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/gilroy"
        android:letterSpacing="0"
        android:layout_marginBottom="30dp"
        android:text="@string/create_a_game_btn"
        android:textAllCaps="false"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>