<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_sand">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/new_game_title"
        android:textColor="@color/primary_red"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumOfRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/number_of_rounds_tag"
        android:textColor="@color/dark_red"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:stepSize="1.0"
        android:value="1.0"
        android:valueFrom="1.0"
        android:valueTo="10.0"
        app:haloRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumOfRounds"
        app:thumbColor="@color/primary_red"
        app:trackColor="@color/background_darker"
        app:tickColor="@color/background_darker_darker"
        app:thumbElevation="3dp"
        app:trackHeight="8dp" />

    <TextView
        android:id="@+id/tvPacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/packs_tag"
        android:textColor="@color/dark_red"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tvNumOfRounds"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPacks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tvPacks"
        app:layout_constraintTop_toBottomOf="@+id/tvPacks"
        tools:listitem="@layout/packs_item" />

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/empty_list_error"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPacks" />

    <com.eyalbira.loadingdots.LoadingDots
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="70dp"
        android:visibility="invisible"
        app:LoadingDots_dots_color="@color/primary_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPacks" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/gilroy"
        android:text="Password:"
        android:textColor="@color/dark_red"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tvPacks"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="388dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="no"
        android:layout_marginTop="10dp"
        android:background="@drawable/title_screen_input_bg"
        android:fontFamily="@font/gilroy"
        android:maxLength="12"
        android:maxLines="1"
        android:singleLine="true"
        android:paddingHorizontal="15dp"
        android:textColor="@color/dark_red"
        android:backgroundTint="@color/background_darker"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/btNext"
        app:fabCustomSize="70dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/ok_green"
        android:src="@drawable/ic_tick_icon"
        android:foregroundGravity="center"
        android:scaleType="center"
        app:maxImageSize="30dp"
        app:tint="@color/ok_green_darker"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>